on-prem-or-cloud-agnostic-kubernetes/calico/networkpolicy-allow-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-google
spec:
  podSelector: 
    matchLabels:
      app: egress
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 8.8.8.8/32
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
spec:
  podSelector: 
    matchLabels:
      app: egress
  policyTypes:
  - Egress
  egress:
  - to:
    # allow DNS resolution
    ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
