on-prem-or-cloud-agnostic-kubernetes/calico/networkpolicy-isolation.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: default
spec:
  podSelector:
    matchLabels: {}
